Add frontend mapping

--- a/src/emissary-ingress/mappings.yaml
+++ b/src/emissary-ingress/mappings.yaml
@@ -40,3 +40,14 @@ spec:
   hostname: playeconomy1384.northeurope.cloudapp.azure.com
   prefix: /trading-svc/
   service: trading-service.trading
+
+---
+# frontend
+apiVersion: getambassador.io/v3alpha1
+kind: Mapping
+metadata:
+  name: frontend-mapping
+spec:
+  hostname: playeconomy1384.northeurope.cloudapp.azure.com
+  prefix: /
+  service: frontend-client.frontend
