--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -23,9 +23,22 @@ services:
       - pe-network
     hostname: rabbitmq
 
+  seq:
+    image: datalust/seq
+    container_name: seq
+    environment:
+      - ACCEPT_EULA=Y
+    ports:
+      - 5341:5341
+      - 80:80
+    volumes:
+      - pe-seqdata:/data
+
 volumes:
   pe-mongodbdata:
   pe-rabbitmqdata:
+  pe-seqdata:
+
 
 networks:
   pe-network:
