--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       - 80:80
     volumes:
       - pe-seqdata:/data
+    networks:
+      - pe-network
 
   jaeger:
     image: jaegertracing/all-in-one
@@ -45,11 +47,22 @@ services:
       - 14268:14268
       - 16686:16686
 
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus/otel.yml:/etc/prometheus/prometheus.yml
+      - pe-prometheusdata:/prometheus
+    networks:
+      - pe-network
+
 volumes:
   pe-mongodbdata:
   pe-rabbitmqdata:
   pe-seqdata:
-
+  pe-prometheusdata:
 
 networks:
   pe-network:
